--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
             <a href="#made" class="hero-made-btn">How it’s made</a>
             <a href="" class="hero-down-btn"
               >scroll down
-                <svg width="38" height="38" class="scroll-icon">
-                  <use href="./img/icons-chocolate.svg#icon-hero-scroll">
-                  </use>
-                </svg>
+              <svg width="38" height="38" class="scroll-icon">
+                <use href="./img/icons-chocolate.svg#icon-hero-scroll"></use>
+              </svg>
             </a>
           </div>
         </div>
@@ -101,7 +100,9 @@
             <li class="features-item">
               <div class="feat-icon-border">
                 <svg width="32" height="32" class="features-icon">
-                  <use href="./img/icons-chocolate.svg#icon-features-icon"></use>
+                  <use
+                    href="./img/icons-chocolate.svg#icon-features-icon"
+                  ></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Unsurpassed taste</h3>
@@ -112,12 +113,14 @@
                 Unsurpassed Taste and discover a new level of chocolate bliss.
               </p>
             </li>
-            <div class="features-item">
+            <li class="features-item">
               <div class="feat-icon-border">
-              <svg width="32" height="32" class="features-icon">
-                <use href="./img/icons-chocolate.svg#icon-features-icon-Coin"></use>
-              </svg>
-            </div>
+                <svg width="32" height="32" class="features-icon">
+                  <use
+                    href="./img/icons-chocolate.svg#icon-features-icon-Coin"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Affordable price</h3>
               <p class="features-item-text">
                 Indulge in high-quality chocolate without breaking the bank with
@@ -130,7 +133,9 @@
             <li class="features-item">
               <div class="feat-icon-border">
                 <svg width="32" height="32" class="features-icon">
-                  <use href="./img/icons-chocolate.svg#icon-features-icon-spoon"></use>
+                  <use
+                    href="./img/icons-chocolate.svg#icon-features-icon-spoon"
+                  ></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Own production</h3>
@@ -156,7 +161,7 @@
             step of our process adds up to one exceptional taste sensation.
           </p>
           <ul class="taste-list">
-            <li class="taste-item">
+            <li class="taste-item orange">
               <img
                 src="./img/img-1.png"
                 alt="Milk chocolate"
@@ -176,7 +181,7 @@
               />
               <h3 class="taste-subtitle">MILK</h3>
             </li>
-            <li class="taste-item">
+            <li class="taste-item dark">
               <img
                 src="./img/img-3.png"
                 alt="Nuts"
@@ -196,7 +201,7 @@
               />
               <h3 class="taste-subtitle">SEMI - SWEET CHOCOLATE</h3>
             </li>
-            <li class="taste-item">
+            <li class="taste-item orange">
               <img
                 src="./img/img-5.png"
                 alt="Cocoa"
@@ -216,7 +221,7 @@
               />
               <h3 class="taste-subtitle">RASPBERRY</h3>
             </li>
-            <li class="taste-item">
+            <li class="taste-item dark">
               <img
                 src="./img/img-7.png"
                 alt="COCONUT"
